Fixed the image carousel, it's loading in right now. Updated the main CSS to include flex on the containers to align stuff better

--- a/imageCar.css
+++ b/imageCar.css
@@ -4,9 +4,12 @@
   overflow: hidden;
   position: relative;
   display: flex;
+  align-items: center;
 }
 
 .carousel-container {
+  display: flex;
+  flex-direction: row;
   align-content: center;
   width: 2400px; 
   height: 400px;
@@ -36,4 +39,8 @@
   100% {
     transform: translateX(0);
   }
+}
+
+#carImageDiv{
+  margin: auto;
 }
