--- a/style.css
+++ b/style.css
@@ -17,3 +17,9 @@ h1{
     padding: 16px;
     margin: 0px;
 }
+
+.codeContainer #carImageDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
